@@ -66,14 +66,15 @@ import java.util.stream.Collectors;
 
     @Async("taskExecutor")
     @Override
-    public CompletableFuture<List<Car>> addCars(List<Car> cars) throws IllegalArgumentException {
+    public CompletableFuture<List<Car>> addBunchCars(List<Car> cars) throws IllegalArgumentException {
+        long starTime = System.currentTimeMillis();
 
         // Verificar si la id existe y si la marca está en la base de datos
         List<Car> addedCars = cars.stream().map(car -> {
             if ((car.getId() != null) && carRepository.existsById(car.getId())){
                throw new IllegalArgumentException("The Id " + car.getId() + " already exists");
             }
-
+            // Se obtienen las marcas a de los coches a actualizar
             Optional<BrandEntity> brandEntityOptional = brandRepository.findByNameIgnoreCase(car.getBrand().getName());
 
             if (brandEntityOptional.isEmpty()){
@@ -90,6 +91,9 @@ import java.util.stream.Collectors;
 
             return CarEntityMapper.INSTANCE.carEntityToCar(savedCarEntity);
         }).toList();
+
+        long endTime = System.currentTimeMillis();
+        log.info("Total time: " + (endTime-starTime));
 
         // Se devulven los coches guardados
         return CompletableFuture.completedFuture(addedCars);
@@ -141,10 +145,47 @@ import java.util.stream.Collectors;
 
     }
 
-
+    @Async("taskExecutor")
     @Override
-    public CompletableFuture<List<Car>> updateCars(List<Car> cars) {
-        return null;
+    public CompletableFuture<List<Car>> updateBunchCars(List<Car> cars) throws IllegalArgumentException {
+        long starTime = System.currentTimeMillis();
+
+        // Se guardan los Car actualizados haciendo las comprobaciones de marca e id existentes.
+        List<Car> updatedCars = cars.stream().map(car -> {
+
+            // Pasar de Brand a BrandEntity y comprobar que está dada de alta en la base de datos
+            BrandEntity brandEntity = BrandEntityMapper.INSTANCE.brandToBrandEntity(car.getBrand());
+            Optional<BrandEntity> brandEntityOptional = brandRepository.findByNameIgnoreCase(brandEntity.getName());
+
+            // Comprobación de Brand
+            if (brandEntityOptional.isEmpty()){
+                throw new IllegalArgumentException("Brand: " + brandEntity.getName() + " not yet registred");
+            }
+            // Comprobación de id
+            if ((car.getId() == null) || (!carRepository.existsById(car.getId()))){
+                throw new IllegalArgumentException("Id: " + car.getId() + " does not exist");
+            }
+
+            // Si existen id y brand de cada car se toman los datos de Brand de la base de datos
+            brandEntity = brandEntityOptional.get();
+
+            // Pasamos los Car a CarEntity
+            CarEntity carEntity = CarEntityMapper.INSTANCE.carToCarEntity(car);
+
+            // Se setea BrandEntity para su CarEntity
+            carEntity.setBrand(brandEntity);
+
+            // Se actualizan los datos
+            CarEntity updatedCarEntity = carRepository.save(carEntity);
+
+            // Se devuelve el Car actualizado
+            return CarEntityMapper.INSTANCE.carEntityToCar(updatedCarEntity);
+        }).toList();
+
+        long endTime = System.currentTimeMillis();
+        log.info("Total time: " + (endTime-starTime));
+
+        return CompletableFuture.completedFuture(updatedCars);
     }
 
 
@@ -160,12 +201,18 @@ import java.util.stream.Collectors;
         }
     }
 
-
+    @Async("taskExecutor")
     @Override
-    public List<Car> getAllCars() {
+    public CompletableFuture<List<Car>> getAllCars() {
+        long starTime = System.currentTimeMillis();
 
         // Se obtienen en una lista todos los objetos de tipo CarEntity y se mapean a tipo Car
-        return carRepository.findAll().stream().map(CarEntityMapper.INSTANCE::carEntityToCar)
-                .collect(Collectors.toList());
+        List<Car> allCars = carRepository.findAll().stream().map(CarEntityMapper.INSTANCE::carEntityToCar)
+                .toList();
+
+        long endTime = System.currentTimeMillis();
+        log.info("Total time: " + (endTime-starTime));
+
+        return CompletableFuture.completedFuture(allCars);
     }
 }
